--- a/src/_sass/pages/_team.scss
+++ b/src/_sass/pages/_team.scss
@@ -85,15 +85,22 @@
 }
 
 @media only screen and(max-width: 500px) {
-    .team__title {
-        margin-left: -20px;
+    .team__page {
+        flex-direction: column;
     }
+
     #students, #team {
-        margin-left: -110px;
+        margin-left: -310px;
+        flex-direction: column;
         .a-student__content {
             margin-bottom: calc(var(--gutter)*3);
         }
+        
     }
+
+    .team__title h2 {
+        margin-left: -50px;
+   }
 
     #team {
         .o-student__name {
