--- a/src/_sass/pages/_cases.scss
+++ b/src/_sass/pages/_cases.scss
@@ -30,7 +30,7 @@
     .a-case__moreinfo {
         position: absolute;
         display: none;
-        width: 100px;
+        width: 100%;
         height: 250px;
         transition-duration: 0.3s;
         opacity: 1;
