--- a/src/_sass/pages/_detail.scss
+++ b/src/_sass/pages/_detail.scss
@@ -47,6 +47,7 @@
 .detail__studentinfo {
     text-align: left;
     margin-left: calc(var(--gutter)*4.3);
+    margin-top: calc(var(--gutter)*3);
 }
 
 .m-case {
