--- a/src/_sass/base/_base.scss
+++ b/src/_sass/base/_base.scss
@@ -1,5 +1,6 @@
 body {
     overflow-x: hidden;
+    background: var(--color--whitish);
     a {
         color: var(--color--whitish);
         transition-duration: 0.3s;
